infrastructure/monitoring/kube-prometheus-stack/manifests/monitoring-oauth2-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-oauth2-proxy
  namespace: monitoring
  labels:
    app: monitoring-oauth2-proxy
spec:
  ports:
  - name: http
    port: 4180
    targetPort: 4180
  selector:
    app: monitoring-oauth2-proxy
