infrastructure/monitoring/kube-prometheus-stack/manifests/alertmanager-ingress-oauth2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: alertmanager-oauth2
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.crownlabs.polito.it
    http:
      paths:
      - backend:
          serviceName: monitoring-oauth2-proxy
          servicePort: 4180
        path: /oauth2
  tls:
  - hosts:
    - alertmanager.crownlabs.polito.it
    secretName: alertmanager-cert
